--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@ Bless us you all great people<br>
 
 		<h2>Quotes of great people</h2>
 
-		<p class="quote">"Wanting fame is a disease and one day I will want to be free from this disease, from this desire. Where fame doesn’t matter. Where just experiencing life and being okay with it is enough." -Irfan Khan</p>
+		<p class="quote">"Wanting fame is a disease and one day I will want to be free from this disease, from this desire. Where fame doesnâ€™t matter. Where just experiencing life and being okay with it is enough." -Irfan Khan</p>
 		<p class="quote">"If the deaf are to hear, the voice has to be very loud" - Bhagat Singh</p>
 
 	</div>
 
 <div class="footer">
 
-	<div class="title">Subscribe to our newsletter!</div>
+	<div class="title">Add quote</div>
 
 	<form class="form">
 
@@ -123,7 +123,12 @@ Bless us you all great people<br>
 
 	<label>Email</label>
 	<input type="email" placeholder = "abc@gmail.com"><br>
+	<label>Quote</label>
 
+	<input type="text" class="Quote" placeholder="enter quote"><br>
+		<label>person</label>
+
+	<input type="text" class="person" placeholder="who gave this quote"><br>
 	<input type="submit" class="button" value="Submit"><br>
 
 </form>
