--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ Bless us you all great people<br>
 <div class="s m l ab">"If the deaf are to hear, the voice has to be very loud" - Bhagat Singh</div>
 <div class="s m l ab">"The greatest religion is to be true to your own nature. Have faith in yourselves." - Swami Vivekananda</div>
 <div class="s m l ab">"There is no perfect musician anyway. There are only very good musicians who make fewer mistakes." - S.P. Balasubrahmanyam</div>
-<div class="s m l ab">"Just doing good work matters to me. I might be doing TV, theatre or movies or, for that matter, open a canteen in a film city or work on my short films. I don’t have the fear of failure." - Sushant Singh Rajput</div>
+<div class="s m l ab">"Just doing good work matters to me. I might be doing TV, theatre or movies or, for that matter, open a canteen in a film city or work on my short films. I don't have the fear of failure." - Sushant Singh Rajput</div>
 <div class="s m l ab">"The great secret of true success, of true happiness, is this: the man or woman who asks for no return, the perfectly unselfish person, is the most successful." - Swami Vivekananda</div>
 
 
